testsuite/tests/th/T14627.stderr

T14627.hs:4:1: error:
    • Illegal term-level use of the type constructor or class ‘Bool’
    • imported from ‘Prelude’ at T14627.hs:1:1
      (and originally defined in ‘GHC.Types’)
    • In the expression: Bool
      In an equation for ‘f’: f = Bool
